<?xml version="1.0" encoding="utf-8"?>
<!-- // Progetto a cura di Alessandro Tornusciolo
     // Matricola 65566 -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="12dp"
    tools:context=".Register">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <Space
        android:layout_width="match_parent"
        android:layout_height="15dp"/>

    <TextView
        android:id="@+id/login_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_title_register"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="@dimen/text_height_title"
        android:textColor="@color/nero_testi"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="45dp"/>

    <TextView
        android:id="@+id/registrazione_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registrazione_username"
        android:textSize="@dimen/text_height_label_3"
        android:textColor="@color/nero_testi"/>


    <EditText
        android:id="@+id/username_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/hint_username"
        android:textSize="@dimen/text_height_field_2"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp"/>

    <TextView
        android:id="@+id/registrazione_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registrazione_password"
        android:textSize="@dimen/text_height_label_3"
        android:textColor="@color/nero_testi"/>

    <EditText
        android:id="@+id/password_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/hint_password"
        android:textSize="@dimen/text_height_field_2"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp"/>

    <TextView
    android:id="@+id/registrazione_conferma_password"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/registrazione_conferma_password"
    android:textSize="@dimen/text_height_label_3"
    android:textColor="@color/nero_testi"/>


    <EditText
        android:id="@+id/confirm_password_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/registrazione_hint_conferma_password"
        android:textSize="@dimen/text_height_field_2"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp"/>

    <TextView
        android:id="@+id/registrazione_citta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registrazione_citta"
        android:textSize="@dimen/text_height_label_3"
        android:textColor="@color/nero_testi"/>


    <EditText
        android:id="@+id/citta_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/registrazione_hint_citta"
        android:textSize="@dimen/text_height_field_2"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp"/>

    <TextView
        android:id="@+id/registrazione_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registrazione_data"
        android:textSize="@dimen/text_height_label_3"
        android:textColor="@color/nero_testi"/>


    <EditText
        android:id="@+id/date_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:hint="@string/registrazione_hint_data"
        android:textSize="@dimen/text_height_field_2"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="50dp"/>

    <Button
        android:id="@+id/button_registrati"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:background="@drawable/login_button"
        android:text="@string/button_registrati"
        android:textSize="@dimen/text_height_field_1"
        android:textColor="#FFFFFF"/>

    </LinearLayout>

</ScrollView>