<?xml version="1.0" encoding="utf-8"?>
<!-- // Progetto a cura di Alessandro Tornusciolo
     // Matricola 65566 -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="12dp"
    tools:context=".ModificaPassword">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp"/>

        <TextView
            android:id="@+id/login_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Home"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="@dimen/text_height_title"
            android:textColor="@color/nero_testi"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="35dp"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="35dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/registrazione_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registrazione_username"
                android:textSize="@dimen/text_height_label_3"
                android:textColor="@color/nero_testi"/>

            <Space
                android:layout_width="50dp"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/campo_user_modifica"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="@dimen/text_height_label_3"
                android:textColor="@color/nero_testi"/>

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="35dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/registrazione_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registrazione_password"
                android:textSize="@dimen/text_height_label_3"
                android:textColor="@color/nero_testi"/>

            <Space
                android:layout_width="50dp"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/campo_pass_modifica"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="@dimen/text_height_label_3"
                android:textColor="@color/nero_testi"/>

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp"/>

        <TextView
            android:id="@+id/confirmText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/conferma"
            android:gravity="center"
            android:textSize="24dp"
            android:textColor="@color/nero_testi"
            android:background="@color/confirmGreen"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nuova_pass"
            android:textSize="@dimen/text_height_label_3"
            android:textColor="@color/nero_testi"/>



        <EditText
            android:id="@+id/nuova_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="35dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/conferma_nuova"
            android:textSize="@dimen/text_height_label_3"
            android:textColor="@color/nero_testi"/>

        <EditText
            android:id="@+id/conferma_nuova_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="75dp"/>

        <Button
            android:id="@+id/aggiorna_button"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:background="@drawable/login_button"
            android:text="@string/aggiorna_pass"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/text_height_field_1" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"/>

        <Button
            android:id="@+id/home_button"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:background="@drawable/home_button"
            android:text="@string/home"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/text_height_field_1" />

    </LinearLayout>


</ScrollView>