<?xml version="1.0" encoding="utf-8"?>
<!-- // Progetto a cura di Alessandro Tornusciolo
     // Matricola 65566 -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="12dp"
    tools:context=".MainUtente">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp"/>

        <TextView
            android:id="@+id/login_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Home"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="@dimen/text_height_title"
            android:textColor="@color/nero_testi"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="35dp"/>

        <TextView
            android:id="@+id/home_benvenuto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stringa_benvenuto"
            android:textAlignment="center"
            android:textColor="@color/nero_testi"
            android:textSize="@dimen/text_height_label_3" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="35dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/home_tuoi_dati"
            android:textColor="@color/nero_testi"
            android:textSize="@dimen/text_height_label_3" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="35dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/registrazione_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registrazione_username"
                android:textSize="@dimen/text_height_label_3"
                android:textColor="@color/nero_testi"/>

            <Space
                android:layout_width="50dp"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/campo_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="@dimen/text_height_label_3"
                android:textColor="@color/nero_testi"/>

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="35dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/registrazione_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registrazione_password"
                android:textSize="@dimen/text_height_label_3"
                android:textColor="@color/nero_testi"/>

            <Space
                android:layout_width="50dp"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/campo_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="@dimen/text_height_label_3"
                android:textColor="@color/nero_testi"/>

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="35dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/registrazione_citta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_citta"
                android:textSize="@dimen/text_height_label_3"
                android:textColor="@color/nero_testi"/>

            <Space
                android:layout_width="50dp"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/campo_citta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="@dimen/text_height_label_3"
                android:textColor="@color/nero_testi"/>

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="35dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/registrazione_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registrazione_data"
                android:textSize="@dimen/text_height_label_3"
                android:textColor="@color/nero_testi"/>

            <Space
                android:layout_width="50dp"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/campo_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="@dimen/text_height_label_3"
                android:textColor="@color/nero_testi"/>

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="75dp"/>

        <Button
            android:id="@+id/button_logout"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:background="@drawable/login_button"
            android:text="@string/button_logout"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/text_height_field_1" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="12dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text = "@string/modifica_password"
            android:textSize="16sp"
            android:textColor="@color/blue_link"
            android:onClick="onClick"
            android:clickable="true"/>


    </LinearLayout>

</ScrollView>